Fix spacing of headers and button of connect4 game in middle div

--- a/game/app/assets/stylesheets/connect4.css
+++ b/game/app/assets/stylesheets/connect4.css
@@ -1,5 +1,5 @@
 #connect4-heading {
-    margin-top: 1px;
+    margin-top: -8.5px;
 }
 
 .board-container {
@@ -41,13 +41,19 @@
 
 #round-header {
     text-align: center;
-    margin: 0; /* reset default margins */
+    margin: -14px; 
 }
 
 #winner {
     text-align: center;
-    margin-bottom: 2%;
-    margin-top: 0;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+
+.middle-div {
+    display: flex;
+    flex-direction: column;
 }
 
 .red-text {
@@ -80,5 +86,5 @@
 .game-over {
     color: blue;
     /* x-offset, y-offset, blur, color (tip: use devtools to change it dynamically; much easier! */
-    text-shadow: -1px 4px 9px #00000070;
+    text-shadow: -3px 2px 3px rgb(81 81 2 / 55%);
 }
